--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>io.calendarium</groupId>
   <artifactId>calendarium-core</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.0-SNAPSHOT</version>
 
   <name>calendarium-core</name>
   <url>http://github.com/crowdcode-de/calendarium</url>
@@ -151,14 +151,14 @@
         <repository>
           <id>sonatype-staging</id>
           <name>Sonatype Release Staging Repository</name>
-          <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+          <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2</url>
         </repository>
 
         <!-- Publish snapshots here -->
         <snapshotRepository>
           <id>sonatype-snapshot</id>
           <name>Sonatype Snapshot Repository</name>
-          <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+          <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
         </snapshotRepository>
       </distributionManagement>
     </profile>
